Minor corrections in documentation

--- a/README
+++ b/README
@@ -1,9 +1,11 @@
-This project aims to build a arduino driven speedometer like bandwidth meter
+This project provides schematics, templates and software to build an arduino driven speedometer like bandwidth meter
 using cheap RC servos. Throughput bandwidth is read from a Fritz!Box router
 through its upnp web server.
 Materials needed:
 Arduino uno (tested with version R3)
 Arduino ethernet shield
 Two TowerPro SG90 Micro Servos
-
+A ten centimeter diameter tin can with its lid carefully removed
+A ten centimeter diameter perspex disc.
+Some jumper cables.
 
